--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -1,2 +1,15 @@
-h1
-	opacity 0
+
+#stage
+	display block
+	float left
+
+#controller
+	float left
+	background #ccc
+
+	.anchor
+		width 10px
+		height 10px
+		margin 0
+		border-radius 10px
+		background #fff
