--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -1,15 +1,18 @@
 
 #stage
 	display block
-	float left
+	margin auto
+	border 1px solid #aaa
 
 #controller
-	float left
+	position relative
 	background #ccc
+	margin auto
 
 	.anchor
-		width 10px
-		height 10px
+		position absolute
+		width 10%
+		height 10%
 		margin 0
-		border-radius 10px
+		border-radius 100%
 		background #fff
