--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -20,6 +20,15 @@
 		<div id="controller">
 			<div class="anchor"></div>
 		</div>
+
+		<div id="display">
+			<div>
+				<label>
+					FPS:
+					<span class='fps'></span>
+				</label>
+			</div>
+		</div>
 	</div>
 
 	<?= foot ?>
