--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -5,14 +5,7 @@
 	border 1px solid #aaa
 
 #controller
+	display block
 	position relative
 	background #ccc
 	margin auto
-
-	.anchor
-		position absolute
-		width 10%
-		height 10%
-		margin 0
-		border-radius 100%
-		background #fff
