--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -17,9 +17,7 @@
 	<div id="main">
 		<canvas id='stage'></canvas>
 
-		<div id="controller">
-			<div class="anchor"></div>
-		</div>
+		<canvas id="controller"></canvas>
 
 		<div id="display">
 			<div>
