add: Ammo basic.

--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -21,10 +21,12 @@
 
 		<div id="display">
 			<div>
-				<label>
-					FPS:
-					<span class='fps'></span>
-				</label>
+				FPS:
+				<span class='fps'></span>
+			</div>
+			<div>
+				Time:
+				<span class='time'></span>
 			</div>
 		</div>
 	</div>
@@ -36,6 +38,7 @@
 		'renderer',
 		'stage',
 		'shuttle',
+		'ammo',
 		'controller'
 	) ?>
 
