--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -1,12 +1,16 @@
+html, body
+	overflow hidden
+
+#main
+	margin auto
 
 #stage
 	display block
 	margin auto
-	border 1px solid #aaa
+	background #eee
 
 #controller
 	display block
 	position relative
 	background #ccc
 	margin auto
-	border 1px solid #aaa
