--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -19,16 +19,18 @@
 	<div id="main">
 		<canvas id='stage'></canvas>
 
+		<div id="game-over" class="hide text-center">Game Over</div>
+
 		<canvas id="controller"></canvas>
 
-		<div id="display" class="font-20 hide">
-			<div>
-				<i class='fa fa-dashboard'></i>
-				<span class='fps'>0.00</span>
-			</div>
+		<div id="display">
 			<div>
 				<i class='fa fa-clock-o'></i>
 				<span class='time'>0.00</span>
+			</div>
+			<div>
+				<i class='fa fa-dashboard'></i>
+				<span class='fps'>0.00</span>
 			</div>
 		</div>
 	</div>
