--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -10,11 +10,19 @@ html, body
 	margin auto
 	background #eee
 
-#game-over
+#stage-info
 	position absolute
+	width 100%
+	top 0
 	font-size 30pt
 	color #ff2458
+
+#controller-info
+	position absolute
 	width 100%
+	bottom 0
+	font-size 16pt
+	background #aaa
 
 #controller
 	display block
@@ -27,5 +35,6 @@ html, body
 
 	&.large
 		font-size 16pt
+
 	&.small
 		font-size 10pt
