--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -19,18 +19,18 @@
 	<div id="main">
 		<canvas id='stage'></canvas>
 
-		<div id="game-over" class="hide text-center">Game Over</div>
+		<div id="stage-info" class="hide text-center">
+			( °Д °;)
+		</div>
 
 		<canvas id="controller"></canvas>
+
+		<div id="controller-info" class="text-center">Tap to Start</div>
 
 		<div id="display">
 			<div>
 				<i class='fa fa-clock-o'></i>
 				<span class='time'>0.00</span>
-			</div>
-			<div>
-				<i class='fa fa-dashboard'></i>
-				<span class='fps'>0.00</span>
 			</div>
 		</div>
 	</div>
