--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -32,6 +32,14 @@
 				<i class='fa fa-clock-o'></i>
 				<span class='time'>0.00</span>
 			</div>
+			<div>
+				<i class='fa fa-asterisk'></i>
+				<span class='ammo'>0</span>
+			</div>
+			<div>
+				<i class='fa fa-flag'></i>
+				<span class='best'>0</span>
+			</div>
 		</div>
 	</div>
 
