--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -20,7 +20,9 @@
 		<canvas id='stage'></canvas>
 
 		<div id="stage-info" class="hide text-center">
-			( °Д °;)
+			<span class='smilley no'>( °Д °;)</span>
+			<span class='smilley oh'>(´･ω･`)✧</span>
+			<span class='time'></span>s
 		</div>
 
 		<canvas id="controller"></canvas>
