--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -15,7 +15,9 @@ html, body
 	width 100%
 	top 0
 	font-size 30pt
-	color #ff2458
+	text-shadow 1pt 1pt 4pt #ADA6C4
+	.time
+		color rgb(204, 39, 138)
 
 #controller-info
 	position absolute
@@ -23,6 +25,7 @@ html, body
 	bottom 0
 	font-size 16pt
 	background #aaa
+	cursor pointer
 
 #controller
 	display block
@@ -32,6 +35,7 @@ html, body
 
 #display
 	position relative
+	padding-left 3pt
 
 	&.large
 		font-size 16pt
