--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -22,12 +22,12 @@
 		<div id="stage-info" class="hide text-center">
 			<span class='smilley no'>( °Д °;)</span>
 			<span class='smilley oh'>(´･ω･`)✧</span>
-			<span class='time'></span>s
+			<span class='time font-l'></span>s
 		</div>
 
 		<canvas id="controller"></canvas>
 
-		<div id="controller-info" class="text-center">Tap to Start</div>
+		<div id="controller-info" class="text-center font-l">Tap to Start</div>
 
 		<div id="display">
 			<div>
