--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -29,6 +29,8 @@ html, body
 		display none
 	.time
 		color #FF00AD
+	.tap
+		color #fff
 
 #controller-info
 	position absolute
@@ -37,6 +39,8 @@ html, body
 	font-size 2em
 	padding-top 2em
 	cursor default
+	color #fff
+	text-shadow 0.05em 0.05em 0.1em #bfafcf
 
 #controller
 	display block
@@ -49,3 +53,4 @@ html, body
 	padding-left 0.3em
 	display inline-block
 	font-size 1.7em
+	color #AF6542
