--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -25,7 +25,7 @@
 				<span class='smilley oh'>(´･ω･`)✧</span>
 				<span class='time font-l'></span>s
 			</div>
-			<div class='font-l'>Tap to Start</div>
+			<div class='tap font-l'>Tap to Start</div>
 		</div>
 
 		<canvas id="controller"></canvas>
