--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -25,12 +25,12 @@
 				<span class='smilley oh'>(´･ω･`)✧</span>
 				<span class='time font-l'></span>s
 			</div>
-			<div class='tap font-l'>Tap to Start</div>
+			<div class='tap'>Tap to Start</div>
 		</div>
 
 		<canvas id="controller"></canvas>
 
-		<div id="controller-info" class="text-center font-l">
+		<div id="controller-info" class="text-center ">
 			Move Mouse or <br> Touch Move Here <br> to Control
 		</div>
 
