--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -58,6 +58,6 @@ html, body
 	padding-left 0.3em
 	display inline-block
 	font-size 1.5em
-	color #AF6542
+	color #E25E1F
 	background rgba(255, 255, 255, 0.55);
 	border-radius 0.3em
