--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -47,6 +47,9 @@
 				<i class='fa fa-flag'></i>
 				<span class='best'>0</span>
 			</div>
+			<div>
+				<span class='version'>Ver. 1.0</span>
+			</div>
 		</div>
 	</div>
 
