--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -17,7 +17,7 @@
 <body>
 
 	<div id="main" class="font-n">
-		<canvas id='stage'></canvas>
+		<canvas id='stage' class='blur'></canvas>
 
 		<div id="stage-info" class="text-center">
 			<div class="result">
