--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -14,6 +14,7 @@ html, body
 	display block
 	margin auto
 	border-bottom 0.2em solid #6E87A2
+	background url('/app/img/bg_cloud.png') repeat
 
 	&.blur
 		-webkit-filter blur(3px)
