--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -25,15 +25,20 @@ html, body
 	position absolute
 	width 100%
 	top 0
-	font-size 5em
+	font-size 4em
 	color #343C47
-	text-shadow 0.1em 0.1em 0.2em #6C6375
-	background: rgba(255,255,255,0.5)
-	padding-top 2em
+	text-shadow 0.05em 0.05em 0.1em #6C6375
+	background rgba(120, 66, 148, 0.2)
+	padding-top 1em
+	.logo
+		font-size 2em
+		img
+			width 0.7em
 	.result
 		display none
+		color #fff
 	.time
-		color #FF00AD
+		color #FF6CFF
 	.tap
 		color #fff
 
@@ -56,7 +61,7 @@ html, body
 
 #display
 	position relative
-	padding-left 0.3em
+	padding 0.1em 0.3em
 	display inline-block
 	font-size 1.5em
 	color #E25E1F
