--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -1,7 +1,7 @@
 @import "mixins"
 
 .btn
-	border-radius 2px
+	border-radius 2em
 
 @keyframes kfs_tooltip
 	0%
@@ -14,23 +14,24 @@
 .tooltip.in
 	animation kfs_tooltip 200ms
 	.tooltip-inner
-		border-radius 2px
+		border-radius 2em
 
-#NB-info_box
+#NB-notifications
 	position absolute
-	top 60px
-	width 100%
-	text-align center
-	display none
+	top 0.3em
+	right 0.2em
 	z-index 10000
+	font-size 1em
 
-	.info
-		margin auto
-		display inline-block
-		border-radius 3px
-		padding 5px 15px
-		background rgba(0, 0, 0, 0.7)
-		color #FFF
+	.noti
+		position relative
+		display none
+		border-radius 10em
+		padding 0.5em 1em
+		margin 0.5em
+		background rgba(44, 218, 134, 0.7)
+		right 0
+		color #fff
 
 		&.red
-			background rgba(235, 27, 27, 0.7)
+			background rgba(255, 63, 101, 0.7)
