--- a/assets/ejs/404.ejs
+++ b/assets/ejs/404.ejs
@@ -11,7 +11,7 @@
 
 	<div class="container" style="margin-top: 30px">
 		<div class="alert alert-danger text-center">
-			<img src="/img/NB.png" alt="">
+			<img src="/app/img/shuttle.png" alt="">
 			<h1 class="font-l font-38">
 				<i class="icon-warning-sign"></i>
 				<code><?= url ?></code>
