add: Author info.

--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -68,3 +68,7 @@ html, body
 	color #E25E1F
 	background rgba(255, 255, 255, 0.55);
 	border-radius 0.3em
+
+	.version, .author
+		font-size 0.8em
+		color #555
