--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -54,6 +54,9 @@
 			<div>
 				<span class='version'>Ver. 1.0</span>
 			</div>
+			<div>
+				<span class='author'>Feb 2014 ys</span>
+			</div>
 		</div>
 
 		<!-- Global modal message box. -->
