add: Some links.

--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -69,6 +69,8 @@ html, body
 	background rgba(255, 255, 255, 0.55);
 	border-radius 0.3em
 
-	.version, .author
+	.version
 		font-size 0.8em
 		color #555
+	.github, .author
+		font-size 0.8em
