--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -48,14 +48,20 @@
 				<span class='ammo'>0</span>
 			</div>
 			<div>
-				<i class='fa fa-flag'></i>
+				<i class='fa fa-trophy'></i>
 				<span class='best'>0</span>
 			</div>
 			<div>
-				<span class='version'>Ver. 1.0</span>
+				<span class='version'>Ver. 1.1</span>
 			</div>
 			<div>
-				<span class='author'>Feb 2014 ys</span>
+				<a class='github' href='https://github.com/ysmood/flee'>
+					<i class='fa fa-github'></i>
+					Github
+				</a>
+			</div>
+			<div>
+				<a class='author' href='http://ysmood.org'>Feb 2014 ys</a>
 			</div>
 		</div>
 
