add: pause and resumen support.

--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -43,12 +43,15 @@ html, body
 	.tap
 		color #fff
 
+
+#foot
+	position relative
+
 #controller-info
 	position absolute
 	width 100%
-	bottom 0
 	font-size 2em
-	padding-top 2em
+	top 2em
 	cursor default
 	color #fff
 	text-shadow 0.05em 0.05em 0.1em #507C67
@@ -61,7 +64,8 @@ html, body
 	background rgba(87, 162, 132, 0.82)
 
 #display
-	position relative
+	position absolute
+	top 0
 	padding 0.1em 0.3em
 	display inline-block
 	font-size 1.5em
@@ -74,3 +78,10 @@ html, body
 		color #555
 	.github, .author
 		font-size 0.8em
+
+#btn-play-ctrl
+	position absolute
+	top 0.2em
+	right 0.5em
+	font-size 1.4em
+	padding 0.3em 1em
