--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -32,37 +32,40 @@
 			<div class='tap'>Tap to Start</div>
 		</div>
 
-		<canvas id="controller"></canvas>
+		<div id="foot">
+			<canvas id="controller"></canvas>
 
-		<div id="controller-info" class="text-center font-l">
-			Move Mouse or <br> Touch Move Here <br> to Control
-		</div>
+			<div id="controller-info" class="text-center font-l">
+				Move Mouse or <br> Touch Move Here <br> to Control
+			</div>
 
-		<div id="display">
-			<div>
-				<i class='fa fa-clock-o'></i>
-				<span class='time'>0.00</span>
+			<div id="display">
+				<div>
+					<i class='fa fa-clock-o'></i>
+					<span class='time'>0.00</span>
+				</div>
+				<div>
+					<i class='fa fa-asterisk'></i>
+					<span class='ammo'>0</span>
+				</div>
+				<div>
+					<i class='fa fa-trophy'></i>
+					<span class='best'>0</span>
+				</div>
+				<div>
+					<span class='version'>Ver. 0.7</span>
+				</div>
+				<div>
+					<a class='github' target="_blank" href='https://github.com/ysmood/flee'>
+						<i class='fa fa-github'></i>
+						Github
+					</a>
+				</div>
+				<div>
+					<a class='author' target="_blank" href='http://ysmood.org'>Feb 2014 ys</a>
+				</div>
 			</div>
-			<div>
-				<i class='fa fa-asterisk'></i>
-				<span class='ammo'>0</span>
-			</div>
-			<div>
-				<i class='fa fa-trophy'></i>
-				<span class='best'>0</span>
-			</div>
-			<div>
-				<span class='version'>Ver. 1.1</span>
-			</div>
-			<div>
-				<a class='github' href='https://github.com/ysmood/flee'>
-					<i class='fa fa-github'></i>
-					Github
-				</a>
-			</div>
-			<div>
-				<a class='author' href='http://ysmood.org'>Feb 2014 ys</a>
-			</div>
+
 		</div>
 
 		<!-- Global modal message box. -->
