--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -68,16 +68,15 @@ html, body
 	top 0
 	padding 0.1em 0.3em
 	display inline-block
-	font-size 1.5em
 	color #E25E1F
 	background rgba(255, 255, 255, 0.55);
 	border-radius 0.3em
+	font-size 1.5em
 
 	.version
-		font-size 0.8em
 		color #555
-	.github, .author
-		font-size 0.8em
+	.version, .github, .author
+		font-size 0.7em
 
 #btn-play-ctrl
 	position absolute
