--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -38,11 +38,17 @@ html, body
 	.result
 		display none
 		color #fff
-	.time
+	.time, .nice
 		color #FF6CFF
 	.tap
 		color #fff
 
+#time-reporter
+	position absolute
+	top 0
+	left 0.2em
+	font-size 7em
+	color rgba(129, 69, 163, 0.7)
 
 #foot
 	position relative
