--- a/app/client/ejs/app.ejs
+++ b/app/client/ejs/app.ejs
@@ -19,6 +19,8 @@
 	<div id="main" class="font-n">
 		<canvas id='stage' class='blur'></canvas>
 
+		<div id="time-reporter"></div>
+
 		<div id="stage-info" class="font-l text-center">
 			<div class="logo">
 				Fl
@@ -27,7 +29,9 @@
 			</div>
 			<div class="result">
 				<span class='smiley'></span>
+				<br>
 				<span class='time'></span>s
+				<span class='nice'></span>nice
 			</div>
 			<div class='tap'>Tap to Start</div>
 		</div>
