--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -38,8 +38,11 @@ html, body
 	.result
 		display none
 		color #fff
-	.time, .nice
-		color #FF6CFF
+		.time, .nice
+			color #FF6CFF
+	.result.new_record
+		.time, .nice
+				color #FFF72F
 	.tap
 		color #fff
 
