--- a/assets/ejs/foot.ejs
+++ b/assets/ejs/foot.ejs
@@ -9,7 +9,7 @@
 			'/jquery/jquery.min',
 			'/underscore/underscore-min',
 			'/underscore.string/dist/underscore.string.min',
-			'/bootstrap/dist/js/bootstrap.min',
+			// '/bootstrap/dist/js/bootstrap.min',
 
 			// NB
 			'/js/jquery.helpers',
