--- a/assets/ejs/head.ejs
+++ b/assets/ejs/head.ejs
@@ -3,7 +3,8 @@
 <?=
 	css(
 		// Third libs
-		'/bootstrap/dist/css/bootstrap.min',
+		// '/bootstrap/dist/css/bootstrap.min',
+		'/normalize-css/normalize',
 		'/font-awesome/css/font-awesome.min',
 
 		// NB
