--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -1,3 +1,8 @@
+*
+	-webkit-box-sizing border-box
+	-moz-box-sizing border-box
+	box-sizing border-box
+
 html, body
 	overflow hidden
 	font-size 16px
@@ -6,6 +11,9 @@ html, body
 		font-size 26px
 	&.small
 		font-size 12px
+
+.text-center
+	text-align center
 
 #main
 	position relative
