--- a/app/client/css/app.styl
+++ b/app/client/css/app.styl
@@ -94,6 +94,7 @@ html, body
 		color #555
 	.version, .github, .author
 		font-size 0.7em
+		text-decoration none
 
 #btn-play-ctrl
 	position absolute
